--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,28 +19,28 @@ on:
 jobs:
   format:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-        
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.x"
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install black isort flake8
-        
+
     - name: Lint with flake8
       run: |
         flake8 src tests
-        
+
     - name: Format with black
       run: |
         black src tests
-        
+
     - name: Import sort with isort
       run: |
         isort src tests
@@ -53,7 +53,7 @@ jobs:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
-        
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -64,8 +64,9 @@ jobs:
           cache: "pip"
       - name: Install dependencies
         run: |
-          python -m pip install -U pip
-          python -m pip install .[test]
+          pip install -U pip
+          pip install torch
+          pip install .[test]
       - name: Test
         run: pytest --color=yes --cov --cov-report=xml --cov-report=term-missing
       - name: Coverage
@@ -112,6 +113,8 @@ jobs:
     name: Publish
     needs: tag-release
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -129,8 +132,5 @@ jobs:
         run: hatch build -t sdist -t wheel
       - name: Check distributions
         run: twine check dist/*
-      - name: Publish to PyPI
-        run: twine upload dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
